--- a/ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client/ZbW.Testing.Dms.Client.csproj
+++ b/ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client/ZbW.Testing.Dms.Client.csproj
@@ -72,42 +72,26 @@
     </ApplicationDefinition>
     <Compile Include="Model\MetadataItem.cs" />
     <Compile Include="Repositories\ComboBoxItems.cs" />
+    <Compile Include="Services\CouldNotCopyFileException.cs" />
+    <Compile Include="Services\CouldNotMoveFileException.cs" />
+    <Compile Include="Services\DocumentService.cs" />
+    <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\FileTestable.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Services\UserTestable.cs" />
+    <Compile Include="Services\XmlService.cs" />
+    <Compile Include="ViewModels\DocumentDetailViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
-    <Compile Include="ViewModels\DocumentDetailViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
-    <Compile Include="Views\LoginView.xaml.cs">
-      <DependentUpon>LoginView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\MainView.xaml.cs">
-      <DependentUpon>MainView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\DocumentDetailView.xaml.cs">
-      <DependentUpon>DocumentDetailView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\SearchView.xaml.cs">
-      <DependentUpon>SearchView.xaml</DependentUpon>
-    </Compile>
-    <Page Include="Views\LoginView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\MainView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\DocumentDetailView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\SearchView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Compile Include="Views\DocumentDetailView.xaml.cs" />
+    <Compile Include="Views\LoginView.xaml.cs" />
+    <Compile Include="Views\MainView.xaml.cs" />
+    <Compile Include="Views\SearchView.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -145,8 +129,6 @@
   <ItemGroup>
     <Resource Include="Images\magnifying_glass.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
