--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: csharp
-solution: "./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln"
-install:
-  - nuget restore ./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
-  - nuget install NUnit.Console -Version 3.11.0 -OutputDirectory testrunner
 script:
-- xbuild ./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
-- mono ./testrunner/NUnit.ConsoleRunner.3.11.0/tools/nunit3-console.exe ./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/bin/Debug/ZbW.Testing.Dms.Client.UnitTests.dll
+  - xbuild /p:Configuration=Debug ZbW.Testing.Dms.sln
+before_install:
+  - sudo apt-get install nunit-console
+before_script:
+  - nuget restore ZbW.Testing.Dms.sln
+after_script:
+  - nunit-console ZbW.Testing.Dms.Client.UnitTests/bin/Debug/ZbW.Testing.Dms.Client.UnitTests.dll
