--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
 script:
-  - xbuild /p:Configuration=Debug ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
+  - msbuild /p:Configuration=Debug ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
 before_install:
   - sudo apt-get install nunit-console
 before_script:
