--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: csharp
+solution: ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
+install:
+  - nuget restore ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
+  - nuget install NUnit.Runners -Version 3.11.0 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Debug ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
-before_install:
-  - sudo apt-get install nunit-console
-before_script:
-  - nuget restore ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
-after_script:
-  - nunit-console ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/bin/Debug/ZbW.Testing.Dms.Client.UnitTests.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.3.11.0/tools/nunit3-console.exe ./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/bin/Debug/ZbW.Testing.Dms.Client.UnitTests.dll
