--- a/ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/ZbW.Testing.Dms.Client.UnitTests.csproj
+++ b/ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/ZbW.Testing.Dms.Client.UnitTests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.6.3.0\lib\net45\Prism.dll</HintPath>
     </Reference>
