--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ install:
   - nuget install NUnit.Runners -Version 3.9.0 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Debug ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.11.0/tools/nunit3-console.exe ./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/bin/Debug/ZbW.Testing.Dms.Client.UnitTests.dll
+  - mono ./testrunner/NUnit.Runner.3.11.0/tools/nunit3-console.exe ./ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/bin/Debug/ZbW.Testing.Dms.Client.UnitTests.dll
 
