--- a/ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/ZbW.Testing.Dms.Client.UnitTests.csproj
+++ b/ZbW.Testing.Dms_Aufgabe/ZbW.Testing.Dms.Client.UnitTests/ZbW.Testing.Dms.Client.UnitTests.csproj
@@ -57,8 +57,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ViewModels\DocumentDetailViewModelTests.cs" />
     <Compile Include="ViewModels\LoginViewModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MainViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
